--- a/african-marketplace/public/index.html
+++ b/african-marketplace/public/index.html
@@ -6,15 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
-		<link
-			href="./assets/css/fontawesome-all.min.css"
-			rel="stylesheet"
-			type="text/css"
+		<link href="./assets/css/fontawesome-all.min.css" rel="stylesheet" type="text/css"
 		/>
 
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="BloomTech Student Project - African Marketplace"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
