--- a/african-marketplace/public/index.html
+++ b/african-marketplace/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>African Marketplace - Team 6</title>
+		<title>African Marketplace - Bloom Tech Team 6</title>
 	</head>
 	<body class="no-sidebar is-preload">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
@@ -37,7 +37,7 @@
 
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<!-- <script src="assets/js/jquery.dropotron.min.js"></script> -->
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
